la partida.


Cambios presentados el 2021/02/09
---------------------------------
Se remplazan getDemoLevel() y el package levels por un sistema de cargado de niveles
desde archivos JSON, y se redefine el nivel de demostración en este nuevo formato.


Cambios presentados el 2021/02/19
---------------------------------
Se añaden algunas músicas y efectos sonoros, aunque todavía son una minoría.

Se implementa StagedScreen para hacer más fácil implementar pantallas con varias
fases, del mismo modo que ya lo estaba haciendo GameScreen.

Se añade una primera versión de la pantalla que muestra los resultados de la
partida.


Cambios presentados el 2021/02/23
---------------------------------
Se añade el modo de pausa del juego, activado mediante un gesto físico con el móvil
que se detecta con el giroscopio.

También se añaden algunas músicas y sonidos.


Cambios presentados el 2021/02/25
---------------------------------
Se remplaza el sistema de "subpantallas" por un mecanismo mejor de gestión de las
diferentes vistas y fases del juego.

Se añaden más sonidos y una indicación cuando el juego está pausado.

Se añade el uso del vibrador.

Cambios presentados el 2021/02/26
---------------------------------
Se cambia el sistema de transiciones a uno más simple compuesto por varias clases.

Se crea la clase LevelCatalog como interfaz hacia el "catálogo" de niveles disponible.
Permite iterar sobre la información de los niveles existentes y en el futuro cercano
permitirá también leer y escribir los récords asociados a ellos.

Se rediseña la pantalla donde se muestran los resultados de la partida, de modo que
utiliza una estructura de tablas más compleja y colorida (no obstante, visualmente
es muy muy básica, pero ahora al menos es presentable).

Ya que aprender a hacer interfaces complejas es un mundo de por sí y me queda poco
tiempo para dedicarle a este trabajo, las demás pantallas tendrán una apariencia
similar.