@@ -6,11 +6,13 @@ public class LevelInfo {
     private final int id;
     private final String name;
     private final FileHandle levelJsonFile;
+    private final Highscore highscore;
 
     public LevelInfo(int id, String name, FileHandle levelJsonFile) {
         this.id = id;
         this.name = name;
         this.levelJsonFile = levelJsonFile;
+        this.highscore = new Highscore(id);
     }
 
     public int getId() {
@@ -23,5 +25,9 @@ public class LevelInfo {
 
     public FileHandle getLevelJsonFile() {
         return levelJsonFile;
+    }
+
+    public Highscore getHighscore() {
+        return highscore;
     }
 }
