@@ -26,7 +26,7 @@ public class ShowingContinueButtonGameStage implements StagedScreen.GameStage {
     public void enter() {
         resultsScreen.getResultsView().setContinueButtonVisible(true);
         resultsScreen.getResultsView().setContinueListener(continueListener);
-        if (resultsScreen.getPaperCount() > resultsScreen.getHighestScore()) {
+        if (resultsScreen.isNewHighscore()) {
             resultsScreen.getResultsView().setNicknameVisible(true);
             resultsScreen.getResultsView().setContinueButtonText("Guardar");
             resultsScreen.getHighscoreMusic().setLooping(false);
