@@ -321,3 +321,14 @@ es muy muy básica, pero ahora al menos es presentable).
 Ya que aprender a hacer interfaces complejas es un mundo de por sí y me queda poco
 tiempo para dedicarle a este trabajo, las demás pantallas tendrán una apariencia
 similar.
+
+
+Cambios presentados el 2021/02/27
+---------------------------------
+Se perfecciona la presentación de la pantalla de resultados con más músicas y
+sonidos.
+
+Se añade la clase Highscore para actuar como interfaz hacia las preferencias
+compartidas donde se guardan los datos de la puntuación más alta en un nivel, se
+hacen instancias de esta clase accesibles desde LevelInfo y se utiliza este nuevo
+recurso para guardar los resultados en la pantalla de resultados.
